# Robot_NAO_V6

./: .gitignore  LICENSE  README.md  audio_nao.py  chat_nao.py  nao_speak.py  pyproject.toml  requirements.txt  transcribir_audio.py  upload_data.py
src/: DB.docx
